[gd_scene load_steps=8 format=4 uid="uid://c44boeuufd75j"]

[ext_resource type="Script" path="res://main.gd" id="1_k1tcj"]
[ext_resource type="Texture2D" uid="uid://gosy7v4lpmrv" path="res://level/obstacle.png" id="1_qq45b"]
[ext_resource type="PackedScene" uid="uid://00kpuuj8cto3" path="res://player/player.tscn" id="2_8podl"]
[ext_resource type="PackedScene" uid="uid://gowpw1kfkylk" path="res://hud.tscn" id="4_a8n83"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xtr47"]
texture = ExtResource("1_qq45b")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_h7tx8"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_xtr47")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uabap"]
size = Vector2(384, 448)

[node name="main" type="Node"]
script = ExtResource("1_k1tcj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-416, -112)
tile_map_data = PackedByteArray("AAAaACQAAQAAAAAAAAAbACQAAQAAAAAAAAAcACQAAQAAAAAAAAAdACQAAQAAAAAAAAAyACQAAQAAAAAAAAAzACQAAQAAAAAAAAA0ACQAAQAAAAAAAAA1ACQAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAAAAAAaAAwAAQAAAAAAAAAaAA0AAQAAAAAAAAAaAA4AAQAAAAAAAAAaAA8AAQAAAAAAAAAaABAAAQAAAAAAAAAaABEAAQAAAAAAAAAaABIAAQAAAAAAAAAaABMAAQAAAAAAAAAaABQAAQAAAAAAAAAaABUAAQAAAAAAAAAaABYAAQAAAAAAAAAaABcAAQAAAAAAAAAaABgAAQAAAAAAAAAaABkAAQAAAAAAAAAaABoAAQAAAAAAAAAaABsAAQAAAAAAAAAaABwAAQAAAAAAAAAaAB0AAQAAAAAAAAAaAB4AAQAAAAAAAAAaAB8AAQAAAAAAAAAaACAAAQAAAAAAAAAaACEAAQAAAAAAAAAaACIAAQAAAAAAAAAaACMAAQAAAAAAAAAbAAcAAQAAAAAAAAAbAAgAAQAAAAAAAAAbAAkAAQAAAAAAAAAbAAoAAQAAAAAAAAAbAAsAAQAAAAAAAAAbAAwAAQAAAAAAAAAbAA0AAQAAAAAAAAAbAA4AAQAAAAAAAAAbAA8AAQAAAAAAAAAbABAAAQAAAAAAAAAbABEAAQAAAAAAAAAbABIAAQAAAAAAAAAbABMAAQAAAAAAAAAbABQAAQAAAAAAAAAbABUAAQAAAAAAAAAbABYAAQAAAAAAAAAbABcAAQAAAAAAAAAbABgAAQAAAAAAAAAbABkAAQAAAAAAAAAbABoAAQAAAAAAAAAbABsAAQAAAAAAAAAbABwAAQAAAAAAAAAbAB0AAQAAAAAAAAAbAB4AAQAAAAAAAAAbAB8AAQAAAAAAAAAbACAAAQAAAAAAAAAbACEAAQAAAAAAAAAbACIAAQAAAAAAAAAbACMAAQAAAAAAAAAcAAcAAQAAAAAAAAAcAAgAAQAAAAAAAAAcAAkAAQAAAAAAAAAcAAoAAQAAAAAAAAAcAAsAAQAAAAAAAAAcAAwAAQAAAAAAAAAcAA0AAQAAAAAAAAAcAA4AAQAAAAAAAAAcAA8AAQAAAAAAAAAcABAAAQAAAAAAAAAcABEAAQAAAAAAAAAcABIAAQAAAAAAAAAcABMAAQAAAAAAAAAcABQAAQAAAAAAAAAcABUAAQAAAAAAAAAcABYAAQAAAAAAAAAcABcAAQAAAAAAAAAcABgAAQAAAAAAAAAcABkAAQAAAAAAAAAcABoAAQAAAAAAAAAcABsAAQAAAAAAAAAcABwAAQAAAAAAAAAcAB0AAQAAAAAAAAAcAB4AAQAAAAAAAAAcAB8AAQAAAAAAAAAcACAAAQAAAAAAAAAcACEAAQAAAAAAAAAcACIAAQAAAAAAAAAcACMAAQAAAAAAAAAdAAcAAQAAAAAAAAAdAAgAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAgAAQAAAAAAAAAfAAcAAQAAAAAAAAAfAAgAAQAAAAAAAAAgAAcAAQAAAAAAAAAgAAgAAQAAAAAAAAAhAAcAAQAAAAAAAAAhAAgAAQAAAAAAAAAiAAcAAQAAAAAAAAAiAAgAAQAAAAAAAAAjAAcAAQAAAAAAAAAjAAgAAQAAAAAAAAAkAAcAAQAAAAAAAAAkAAgAAQAAAAAAAAAlAAcAAQAAAAAAAAAlAAgAAQAAAAAAAAAmAAcAAQAAAAAAAAAmAAgAAQAAAAAAAAAnAAcAAQAAAAAAAAAnAAgAAQAAAAAAAAAoAAcAAQAAAAAAAAAoAAgAAQAAAAAAAAApAAcAAQAAAAAAAAApAAgAAQAAAAAAAAAqAAcAAQAAAAAAAAAqAAgAAQAAAAAAAAArAAcAAQAAAAAAAAArAAgAAQAAAAAAAAAsAAcAAQAAAAAAAAAsAAgAAQAAAAAAAAAtAAcAAQAAAAAAAAAtAAgAAQAAAAAAAAAuAAcAAQAAAAAAAAAuAAgAAQAAAAAAAAAvAAcAAQAAAAAAAAAvAAgAAQAAAAAAAAAwAAcAAQAAAAAAAAAwAAgAAQAAAAAAAAAxAAcAAQAAAAAAAAAxAAgAAQAAAAAAAAAyAAcAAQAAAAAAAAAyAAgAAQAAAAAAAAAzAAcAAQAAAAAAAAAzAAgAAQAAAAAAAAA0AAcAAQAAAAAAAAA0AAgAAQAAAAAAAAA1AAcAAQAAAAAAAAA1AAgAAQAAAAAAAAAzAAkAAQAAAAAAAAAzAAoAAQAAAAAAAAAzAAsAAQAAAAAAAAAzAAwAAQAAAAAAAAAzAA0AAQAAAAAAAAAzAA4AAQAAAAAAAAAzAA8AAQAAAAAAAAAzABAAAQAAAAAAAAAzABEAAQAAAAAAAAAzABIAAQAAAAAAAAAzABMAAQAAAAAAAAAzABQAAQAAAAAAAAAzABUAAQAAAAAAAAAzABYAAQAAAAAAAAAzABcAAQAAAAAAAAAzABgAAQAAAAAAAAAzABkAAQAAAAAAAAAzABoAAQAAAAAAAAAzABsAAQAAAAAAAAAzABwAAQAAAAAAAAAzAB0AAQAAAAAAAAAzAB4AAQAAAAAAAAAzAB8AAQAAAAAAAAAzACAAAQAAAAAAAAAzACEAAQAAAAAAAAAzACIAAQAAAAAAAAAzACMAAQAAAAAAAAA0AAkAAQAAAAAAAAA0AAoAAQAAAAAAAAA0AAsAAQAAAAAAAAA0AAwAAQAAAAAAAAA0AA0AAQAAAAAAAAA0AA4AAQAAAAAAAAA0AA8AAQAAAAAAAAA0ABAAAQAAAAAAAAA0ABEAAQAAAAAAAAA0ABIAAQAAAAAAAAA0ABMAAQAAAAAAAAA0ABQAAQAAAAAAAAA0ABUAAQAAAAAAAAA0ABYAAQAAAAAAAAA0ABcAAQAAAAAAAAA0ABgAAQAAAAAAAAA0ABkAAQAAAAAAAAA0ABoAAQAAAAAAAAA0ABsAAQAAAAAAAAA0ABwAAQAAAAAAAAA0AB0AAQAAAAAAAAA0AB4AAQAAAAAAAAA0AB8AAQAAAAAAAAA0ACAAAQAAAAAAAAA0ACEAAQAAAAAAAAA0ACIAAQAAAAAAAAA0ACMAAQAAAAAAAAA1AAkAAQAAAAAAAAA1AAoAAQAAAAAAAAA1AAsAAQAAAAAAAAA1AAwAAQAAAAAAAAA1AA0AAQAAAAAAAAA1AA4AAQAAAAAAAAA1AA8AAQAAAAAAAAA1ABAAAQAAAAAAAAA1ABEAAQAAAAAAAAA1ABIAAQAAAAAAAAA1ABMAAQAAAAAAAAA1ABQAAQAAAAAAAAA1ABUAAQAAAAAAAAA1ABYAAQAAAAAAAAA1ABcAAQAAAAAAAAA1ABgAAQAAAAAAAAA1ABkAAQAAAAAAAAA1ABoAAQAAAAAAAAA1ABsAAQAAAAAAAAA1ABwAAQAAAAAAAAA1AB0AAQAAAAAAAAA1AB4AAQAAAAAAAAA1AB8AAQAAAAAAAAA1ACAAAQAAAAAAAAA1ACEAAQAAAAAAAAA1ACIAAQAAAAAAAAA1ACMAAQAAAAAAAAAdACMAAQAAAAAAAAAdAAkAAQAAAAAAAAAdAAoAAQAAAAAAAAAdAAsAAQAAAAAAAAAdAAwAAQAAAAAAAAAdAA0AAQAAAAAAAAAdAA4AAQAAAAAAAAAdAA8AAQAAAAAAAAAdABAAAQAAAAAAAAAdABEAAQAAAAAAAAAdABIAAQAAAAAAAAAdABMAAQAAAAAAAAAdABQAAQAAAAAAAAAdABUAAQAAAAAAAAAdABYAAQAAAAAAAAAdABcAAQAAAAAAAAAdABgAAQAAAAAAAAAdABkAAQAAAAAAAAAdABoAAQAAAAAAAAAdABsAAQAAAAAAAAAdABwAAQAAAAAAAAAdAB0AAQAAAAAAAAAdAB4AAQAAAAAAAAAdAB8AAQAAAAAAAAAdACAAAQAAAAAAAAAdACEAAQAAAAAAAAAdACIAAQAAAAAAAAAeAAkAAQAAAAAAAAAfAAkAAQAAAAAAAAAgAAkAAQAAAAAAAAAhAAkAAQAAAAAAAAAiAAkAAQAAAAAAAAAjAAkAAQAAAAAAAAAkAAkAAQAAAAAAAAAlAAkAAQAAAAAAAAAmAAkAAQAAAAAAAAAnAAkAAQAAAAAAAAAoAAkAAQAAAAAAAAApAAkAAQAAAAAAAAAqAAkAAQAAAAAAAAArAAkAAQAAAAAAAAAsAAkAAQAAAAAAAAAtAAkAAQAAAAAAAAAuAAkAAQAAAAAAAAAvAAkAAQAAAAAAAAAwAAkAAQAAAAAAAAAxAAkAAQAAAAAAAAAyAAkAAQAAAAAAAAAyAAoAAQAAAAAAAAAyAAsAAQAAAAAAAAAyAAwAAQAAAAAAAAAyAA0AAQAAAAAAAAAyAA4AAQAAAAAAAAAyAA8AAQAAAAAAAAAyABAAAQAAAAAAAAAyABEAAQAAAAAAAAAyABIAAQAAAAAAAAAyABMAAQAAAAAAAAAyABQAAQAAAAAAAAAyABUAAQAAAAAAAAAyABYAAQAAAAAAAAAyABcAAQAAAAAAAAAyABgAAQAAAAAAAAAyABkAAQAAAAAAAAAyABoAAQAAAAAAAAAyABsAAQAAAAAAAAAyABwAAQAAAAAAAAAyAB0AAQAAAAAAAAAyAB4AAQAAAAAAAAAyAB8AAQAAAAAAAAAyACAAAQAAAAAAAAAyACEAAQAAAAAAAAAyACIAAQAAAAAAAAAyACMAAQAAAAAAAAAaACUAAQAAAAAAAAAbACUAAQAAAAAAAAAcACUAAQAAAAAAAAAdACUAAQAAAAAAAAAyACUAAQAAAAAAAAAzACUAAQAAAAAAAAA0ACUAAQAAAAAAAAA1ACUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_h7tx8")

[node name="PlayArea" type="Area2D" parent="."]
position = Vector2(224, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayArea"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_uabap")

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Player" parent="." instance=ExtResource("2_8podl")]
position = Vector2(71, 441)

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(71, 441)

[node name="HUD" parent="." instance=ExtResource("4_a8n83")]

[connection signal="body_exited" from="PlayArea" to="." method="_on_playarea_body_exited"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="next_level" from="HUD" to="." method="new_level"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
